apps/ljwx-platform-observability/base/ingress-grafnana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafnana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: dnspod-letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-to-https: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: grafnana.lingjingwanxiang.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
    - host: granfana.lingjingwanxiang.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafnana.lingjingwanxiang.cn
        - granfana.lingjingwanxiang.cn
      secretName: grafnana-lingjingwanxiang-cn-tls
